--- a/html/system/default.html
+++ b/html/system/default.html
@@ -12,7 +12,7 @@
             }
             .table_hacker {
                 width: 100%;
-                border: 1px solid #00FF00;
+                border: 3px solid #00FF00;
                 height: 40px;
                 background-color: rgba(0, 0, 0, 0);
                 color: #00FF00;
@@ -27,11 +27,11 @@
             }
         </style>
     </head>
-    <body style="color: #00FF00;">
-        <h2 style="color: red;width: calc(100%  -10px);border: 1px solid red;padding-top: 10px;padding-bottom: 10px;padding-left: 10px;">在线渗透测试系统</h2>
+    <body style="color: #00FF00;padding: 100px;">
+        <img src="../img/lwc_logo.png" style="width: 100px;height: 40px;border-radius: 10px;position: absolute;top: 135px;left: 350px;" />
+        <h2 style="color: red;padding-top: 10px;padding-bottom: 10px;padding-left: 10px;">教育版渗透测试系统</h2>
         <p style="font-weight: bold;">
-            该平台的目的是为了弥补现如今中国计算机教育与信息安全教育中缺少实践的机会以及对信息安全兴趣的提升，
-            利用该平台以内的工具，适合信息安全初学者以及对此有兴趣取向的人
+            记住，中国需要的不是网安人员，而是具有黑客能力的职业黑客，忠于党忠于人民，做人民的黑客
         </p>
         <br />
         <p>HackerStack关联</p>
