--- a/html/system/ip_location/index.html
+++ b/html/system/ip_location/index.html
@@ -10,7 +10,7 @@
     width: 100%;
     height: 40px;
     background-color: rgba(0, 0, 0, 0.555);
-    border: 1px solid #00FF00;
+    border: 3px solid #00FF00;
     color: #00FF00;
     margin-top: 10px;
     text-align: left;
@@ -19,7 +19,7 @@
     width: 45%;
     height: 40px;
     background-color: rgba(0, 0, 0, 0.555);
-    border: 1px solid #00FF00;
+    border: 3px solid #00FF00;
     color: #00FF00;
     margin-left: 5px;
     margin-top: 10px;
@@ -34,12 +34,12 @@ button:hover {
 }
         </style>
     </head>
-    <body style="background-color: black;padding: 50px;" id="body">
+    <body style="background-color: rgb(0, 0, 0);padding: 20px;" id="body">
         <h2 style="color: #00FF00;">IP定位</h2>
-        <input style="border: 1px solid #00FF00;background-color: black;color: #00FF00;outline: none;height: 30px;width: 100%;" placeholder="输入查询的IP" id="ip" />
+        <input style="border: 3px solid #00FF00;background-color: black;color: #00FF00;outline: none;height: 30px;width: calc(100% - 10px);" placeholder="输入查询的IP" id="ip" />
         <button onclick="ip_location()">查询</button>
         <br /><br />
-        <div id="ip_info" style="padding: 10px;width: 100%;border: 1px solid #00FF00;min-height: 200px;"></div>
+        <div id="ip_info" style="padding: 10px;width: calc(100% - 20px);border: 3px solid #00FF00;min-height: 200px;"></div>
         <p>
             描述:<br />
             利用各个平台的登录模版，来钓鱼获取个人信息
