--- a/html/system/socialEngine/index.html
+++ b/html/system/socialEngine/index.html
@@ -25,7 +25,7 @@ button:hover {
 }
         </style>
     </head>
-    <body style="padding: 50px;background-color: rgba(0, 0, 0, 0);" id="body">
+    <body style="padding: 20px;background-color: rgb(0, 0, 0);" id="body">
         <h2 style="color: #00FF00;">社会工程学攻击</h2>
         <button onclick="social_attack('QQ')">QQ登录模版</button>
         <button onclick="social_attack('WeChat')">微信登录模版</button>
