--- a/html/system/subdomain/index.html
+++ b/html/system/subdomain/index.html
@@ -7,10 +7,10 @@
         <script src="../../js/system.js"></script>
         <style>
             button {
-    width: 100%;
+    width: calc(100% - 5px);
     height: 40px;
     background-color: rgba(0, 0, 0, 0.555);
-    border: 1px solid #00FF00;
+    border: 3px solid #00FF00;
     color: #00FF00;
     margin-top: 10px;
     text-align: left;
@@ -28,11 +28,11 @@ button:hover {
 }
         </style>
     </head>
-    <body style="padding: 50px;background-color: black;" id="body">
+    <body style="padding: 20px;background-color: black;" id="body">
         <h2 style="color: #00FF00;">子域名收集</h2>
-        <input id="domain" placeholder="输入域名，例如 hackerstack.top" style="height: 30px;width: 100%;border: 1px solid #00FF00;background-color: black;outline: none;color: #00FF00;" />
+        <input id="domain" placeholder="输入域名，例如 hackerstack.top" style="height: 30px;width: calc(100% - 15px);border: 3px solid #00FF00;background-color: black;outline: none;color: #00FF00;" />
         <br /><br />
-        <div style="padding: 10px;overflow-y: scroll;width: 100%;height: 400px;resize:vertical;border: 1px solid #00FF00;background-color: black;color: #00FF00;" id="console"></div>
+        <div style="padding: 10px;overflow-y: scroll;width: calc(100% - 30px);height: 200px;resize:vertical;border: 3px solid #00FF00;background-color: black;color: #00FF00;" id="console"></div>
         <br />
         <button onclick="subdomain_get()">执行</button>
         <p>
