--- a/html/system/whois/index.html
+++ b/html/system/whois/index.html
@@ -10,7 +10,7 @@
     width: 100%;
     height: 40px;
     background-color: rgba(0, 0, 0, 0.555);
-    border: 1px solid #00FF00;
+    border: 3px solid #00FF00;
     color: #00FF00;
     margin-top: 10px;
     text-align: left;
@@ -28,9 +28,12 @@ button:hover {
 }
         </style>
     </head>
-    <body style="background-color: black;padding: 50px;" id="body">
+    <body style="background-color: rgb(0, 0, 0);padding: 20px;" id="body">
         <h2 style="color: #00FF00;">Whois查询</h2>
-        <input placeholder="请输入你需要查询的网站" style="width: 100%;height: 30px;background-color: black;outline: none;border: 1px solid green;color: green;" id="website" />
+        <input placeholder="请输入你需要查询的网站" style="width: 100%;height: 30px;background-color: black;outline: none;border: 3px solid #00FF00;color: #00FF00;" id="website" />
+        <br />
+        <br />
+        <div style="overflow-y: scroll;width: 100%;height: 300px;resize:vertical;border: 3px solid #00FF00;background-color: black;color: #00FF00;" id="console"></div>
         <button onclick="load_whois_info()">查询</button>
     </body>
 </html>
