--- a/html/buy/index.html
+++ b/html/buy/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>HackerStack Edu - Buy</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="color: #00FF00;overflow-x: hidden;margin: 0px;padding: 0px;">
     <iframe src="../bg.html" style="width: 100%;height: 100%;position: absolute;bottom: 0px;top: 0px;border: none;"></iframe>
@@ -48,34 +49,46 @@
                 这个实在是过于的侵略性的，在舆论上不好，所以用网安一词来代替，希望大家能理解。
             </p>
             <br />
-            <div style="overflow-y: scroll;height: 300px;padding: 10px;max-width: 700px;border: 1px solid #00FF00;background-color: rgba(0, 0, 0, 0.521);backdrop-filter: blur(5px);">
-                <h1>模块信息</h1>
-                <button class="b">完整的教学教材: 上海市商业学校网安专业教材+HackerStack实战教程</button>
-                <button class="b">社会工程学模块</button>
-                <button class="b">DNS查询模块</button>
-                <button class="b">DNS劫持模块</button>
-                <button class="b">arp欺骗模块</button>
-                <button class="b">计算机木马病毒模块</button>
-                <button class="b">计算机病毒库模块</button>
-                <button class="b">邮件api模块</button>
-                <button class="b">DOS攻击模块/手机热点摧毁模块</button>
-                <button class="b">密码破解模块</button>
-                <button class="b">端口扫描模块</button>
-                <button class="b">信安报告模块</button>
-                <button class="b">Google反向代理</button>
-                <button class="b">IP定位模块</button>
-                <button class="b">数据库入侵模块</button>
-                <button class="b">漏洞扫描模块</button>
-                <button class="b">网站目录扫描模块</button>
-                <button class="b">开放HackerStackAPI模块</button>
-                <button class="b">靶场/蜜罐模块</button>
-                <button class="b">摄像头入侵模块</button>
-                <button class="b">LinwinSploit入侵模块</button>
-            </div>
             <div style="max-width: 700px;">
+                 <button onclick="window.open('https://www.hackerstack.top/')">个人免费版 1个月 全部功能使用权限 0元/月 一个人</button>
+                 <div style="overflow-y: scroll;height: 300px;padding: 10px;max-width: 700px;border: 1px solid #00FF00;background-color: rgba(0, 0, 0, 0.521);backdrop-filter: blur(5px);">
+                    <h1>模块信息</h1>
+                    <button class="b">社会工程学模块</button>
+                    <button class="b">DNS查询模块</button>
+                    <button class="b">端口扫描模块</button>
+                    <button class="b">Google反向代理</button>
+                    <button class="b">IP定位模块</button>
+                    <button class="b">数据库入侵模块</button>
+                    <button class="b">漏洞扫描模块</button>
+                </div>
                 <button onclick="alert('联系微信号: root_user1314 进行购买，包括了咨询服务')">个人教育版 1个月 全部功能使用权限 15元/月 一个人</button>
                 <button onclick="alert('联系微信号: root_user1314 进行购买，包括了咨询服务')">团队教育版(3人到10人) 1个月 全部功能使用权限 60元/月 适用于所有人</button>
                 <button onclick="alert('联系微信号: root_user1314 进行购买，包括了咨询服务')">机构教育版(大于10人) 1个月 全部功能使用权限 10元/月 每个人</button>
+                
+                <div style="overflow-y: scroll;height: 300px;padding: 10px;max-width: 700px;border: 1px solid #00FF00;background-color: rgba(0, 0, 0, 0.521);backdrop-filter: blur(5px);">
+                    <h1>模块信息</h1>
+                    <button class="b">完整的教学教材: 上海市商业学校网安专业教材+HackerStack实战教程</button>
+                    <button class="b">社会工程学模块</button>
+                    <button class="b">DNS查询模块</button>
+                    <button class="b">DNS劫持模块</button>
+                    <button class="b">arp欺骗模块</button>
+                    <button class="b">计算机木马病毒模块</button>
+                    <button class="b">计算机病毒库模块</button>
+                    <button class="b">邮件api模块</button>
+                    <button class="b">DOS攻击模块/手机热点摧毁模块</button>
+                    <button class="b">密码破解模块</button>
+                    <button class="b">端口扫描模块</button>
+                    <button class="b">信安报告模块</button>
+                    <button class="b">Google反向代理</button>
+                    <button class="b">IP定位模块</button>
+                    <button class="b">数据库入侵模块</button>
+                    <button class="b">漏洞扫描模块</button>
+                    <button class="b">网站目录扫描模块</button>
+                    <button class="b">开放HackerStackAPI模块</button>
+                    <button class="b">靶场/蜜罐模块</button>
+                    <button class="b">摄像头入侵模块</button>
+                    <button class="b">LinwinSploit入侵模块</button>
+                </div>
             </div>
         </div>
     </div>
