--- a/html/system/index.html
+++ b/html/system/index.html
@@ -20,6 +20,11 @@
                 document.head.appendChild(script);
             }
 
+            function close_local_console() {
+                document.getElementById("local_console").style.display = "none";
+            }
+
+
             window.onload=function() {
                 
                 function isMobileDevice() {
@@ -71,7 +76,16 @@
                 <iframe style="color: #00FF00;top: 30px;left: calc(15% + 50px);" id="page" src="./default.html" class="card_2">
                     
                 </iframe>
-                <span class="card_2" style="height: calc(32vh + 7px);left: calc(15% + 50px);top: calc(60vh + 60px);color: #00FF00;">
+                <div style="padding: 0px;margin: 0px;color: #00FF00;top: 30px;left: calc(15% + 50px);backdrop-filter: blur(5px);" id="local_console" class="card_2">
+                    <h2 style="margin: 0px;font-size: 20px;width: 100%;height: auto;background-color: #00FF00;border-top: 3px solid black;color: black;">本地信息控制台
+                        <button class="btn_2" style="width: 80px;float: right;;margin-top: 0px;background-color: black;" onclick="close_local_console()">关闭</button>
+                    </h2>
+                    <br />
+                    <div style="margin-left: 10px;margin-right: 10px;width: calc(100% - 10px);" id="local_console_content">
+
+                    </div>
+                </div>
+                <span class="card_2" style="overflow-y: scroll;height: calc(32vh + 7px);left: calc(15% + 50px);top: calc(60vh + 60px);color: #00FF00;">
                     <h2 style="margin: 0px;font-size: 20px;width: 100%;height: auto;background-color: #00FF00;color: black;">本地驱动渗透测试功能</h2>
                     <div id="local_fn" style="padding: 10px;">
                         <p>等待连接本地驱动 ... ...</p>
