--- a/html/system/index.html
+++ b/html/system/index.html
@@ -76,7 +76,7 @@
                 <iframe style="color: #00FF00;top: 30px;left: calc(15% + 50px);" id="page" src="./default.html" class="card_2">
                     
                 </iframe>
-                <div style="padding: 0px;margin: 0px;color: #00FF00;top: 30px;left: calc(15% + 50px);backdrop-filter: blur(5px);" id="local_console" class="card_2">
+                <div style="display: block;padding: 0px;margin: 0px;color: #00FF00;top: 30px;left: calc(15% + 50px);backdrop-filter: blur(5px);border: 10px solid #00FF00;width: calc(60% + 15px);" id="local_console" class="card_2">
                     <h2 style="margin: 0px;font-size: 20px;width: 100%;height: auto;background-color: #00FF00;border-top: 3px solid black;color: black;">本地信息控制台
                         <button class="btn_2" style="width: 80px;float: right;;margin-top: 0px;background-color: black;" onclick="close_local_console()">关闭</button>
                     </h2>
