--- a/html/attack_tools.html
+++ b/html/attack_tools.html
@@ -12,20 +12,20 @@
                 width: 300px;
                 height: 250px;
                 background-color: black;
-                border: 1px solid green;
-                color: green;
+                border: 1px solid #00FF00;
+                color: #00FF00;
                 border-radius: 5px;
                 padding: 15px;
                 margin: 10px;
             }
             button:hover {
-                background-color: green;
+                background-color: #00FF00;
                 color: black;
             }
         </style>
     </head>
     <body style="padding: 50px;background-color: black;">
-        <h2 style="color: green;">渗透测试工具下载</h2>
+        <h2 style="color: #00FF00;">渗透测试工具下载</h2>
         <button onclick="window.location.href='https://gitee.com/LinWin-Cloud/setool-master'">
             <h3>Setool-Master</h3>
             <p>支持平台: Linux,Windows</p>
