--- a/html/system/index.html
+++ b/html/system/index.html
@@ -108,6 +108,8 @@ function login_ok(to_system , showAlert) {
                         <button class="btn_2" onclick="to_subdomain()">子域名收集</button>
                         <button class="btn_2" onclick="document.getElementById('page').src='./bug/'">Nikto漏洞扫描</button>
                         <button class="btn_2" onclick="document.getElementById('page').src='./mirrors/'">镜像网站大全</button>
+                        <button class="btn_2" onclick="document.getElementById('page').src='./dirb/'">Dirb目录爆破</button>
+                        <button class="btn_2" onclick="document.getElementById('page').src='./info_getters/'">信息安全资产收集平台</button>
                     </div>
                 </span>
                 <script>
