--- a/html/system/info_getters/index.html
+++ b/html/system/info_getters/index.html
@@ -21,7 +21,7 @@ button:hover {
     color:black;
 }
         </style>
-        <body>
+        <body style="background-color: black;">
             <button onclick="window.open('https://fofa.info')">FOFA网络空间测绘系统</button>
             <button onclick="window.open('https://www.zoomeye.org/')"> ZoomEye: 钟馗之眼</button>
         </body>
