--- a/html/system/mirrors/index.html
+++ b/html/system/mirrors/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <style>
             button {
@@ -21,7 +22,7 @@ button:hover {
     color:black;
 }
         </style>
-        <body>
+        <body style="background-color: black;">
             <button onclick="window.open('https://google.hackerstack.top/')">Google</button>
             <button onclick="window.open('https://tor.hackerstack.top/')"> Tor: 访问暗网的工具</button>
             <button onclick="window.open('https://ucp.hackerstack.top/')">美国共产党官网</button>
