--- a/html/system/index.html
+++ b/html/system/index.html
@@ -110,6 +110,7 @@ function login_ok(to_system , showAlert) {
                         <button class="btn_2" onclick="document.getElementById('page').src='./mirrors/'">镜像网站大全</button>
                         <button class="btn_2" onclick="document.getElementById('page').src='./dirb/'">Dirb目录爆破</button>
                         <button class="btn_2" onclick="document.getElementById('page').src='./info_getters/'">信息安全资产收集平台</button>
+                        <button class="btn_2" onclick="document.getElementById('page').src='./icp/'">ICP备案查询</button>
                     </div>
                 </span>
                 <script>
