--- a/html/system/pe_index.html
+++ b/html/system/pe_index.html
@@ -11,26 +11,28 @@
         <script src="../js/pe_page_changer.js"></script>
     </head>
     <body align="center" style="padding: 10px;background-color: black;overflow: hidden;">
-        <iframe src="../bg.html" style="position: absolute;top: 0;bottom: 0;width: 100%;border: none;height: 100%;"></iframe>
-        <div>
-            <div align="center" style="overflow-y: scroll;position: absolute;left: 10px;width: calc(100% - 20px);top: 0;bottom: 0;">
-                <style>
-                    .btn_2 {
-                        width: calc(100%-10px);
-                        height: 60px;
-                        background-color: black;
-                        border: 1px solid #00FF00;
-                    }
-                    .btn_2:active {
-                        background-color: #00FF00;
-                        color: black;
-                    }
-                </style>
-                <div align="center">
-                    <div align="center" style="padding: 5px;border: 1px solid #00FF00;">
-                        <h3 style="color: red;font-weight: bold;border: 1px solid red;background-color: black;text-shadow: 0px 0px 10px white;">
-                        HackerStack渗透测试系统
-                    </h3>
+        <iframe src="../bg.html" style="position: absolute;top: 0;bottom: 0;width: 100%;border: none;height: calc(100%);"></iframe>
+        <div align="center">
+            <div>
+                <div align="center" style="overflow-y: scroll;position: absolute;left: 0px;width: calc(100%);top: 0;bottom: 0;">
+                    <style>
+                        .btn_2 {
+                            width: calc(100% - 10px);
+                            height: 35px;
+                            margin: 0px;
+                            margin-top: 1px;
+                            background-color: black;
+                            border: 1px solid #00FF00;
+                        }
+                        .btn_2:active {
+                            background-color: #00FF00;
+                            color: black;
+                        }
+                        body {
+                            margin: 2px;
+                        }
+                    </style>
+                    <div align="center" style="width: 100%;height: calc(90%);overflow-y: scroll;">
                         <button class="btn_2" onclick="window.location.href='./socialEngine/'">社会工程学</button>
                         <button class="btn_2" onclick="window.location.href='./xss_attack/'">XSS脚本攻击</button>
                         <button class="btn_2" onclick="window.location.href='./virus_attack/'">浏览器控制木马攻击</button>
@@ -46,8 +48,18 @@
                         <button class="btn_2" onclick="window.location.href='./sqlmap/'">SqlMap数据库注入</button>
                         <button class="btn_2" onclick="window.location.href='./js_console/'">Js控制台</button>
                         <button class="btn_2" onclick="window.location.href='./dns_search/'">DNS查询(绕防火墙)</button>
-                        <button class="btn_2" onclick="to_subdomain()">子域名收集</button>
-                        <button class="btn_2"onclick="document.getElementById('page').src='./bug/'">Nikto漏洞扫描</button>
+                        <button class="btn_2" onclick="window.location.href='./subdomain/'">子域名收集</button>
+                        <button class="btn_2" onclick="window.location.href='./bug/'">Nikto漏洞扫描</button>
+                        <button class="btn_2" onclick="window.location.href='./mirrors/'">镜像网站大全</button>
+                        <button class="btn_2" onclick="window.location.href='./dirb/'">Dirb目录爆破</button>
+                        <button class="btn_2" onclick="window.location.href='./info_getters/'">信息安全资产收集平台</button>
+                        <button class="btn_2" onclick="window.location.href='./icp/'">ICP备案查询</button>
+    
+                    </div>
+                    <div style="width: 100%;height: calc(10%);background-color: rgba(80, 80, 80, 0.342);">
+                        <button class="btn_3">首页</button>
+                        <button class="btn_3" onclick="alert('https://edu.hackerstack.top')">官网</button>
+                        <button class="btn_3" onclick="window.location.href='../img/5602d880826fda0d7c93529b79dc3ec8.jpg'">赞助</button>
                     </div>
                 </div>
             </div>
